--- a/docroot/parts/hero.htm
+++ b/docroot/parts/hero.htm
@@ -37,6 +37,7 @@
       height: 37px;
       font-size: 75%;
       padding: 0 .75rem;
+      border: 0;
     }
     .app-hero code i {
       font-size: 30px;
@@ -52,7 +53,7 @@
         font-size: 2em;
       }
       .app-hero > .prompt {
-        margin-top: .5em;
+        margin-top: .75em;
       }
     }
     @media only screen and (min-width: 1400px) {
