--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -61,6 +61,27 @@
       background-color: #F6F7F8;
       overflow-x: auto;
     }
+    .list-group-item.demo {
+      padding-bottom: 1.5em;
+    }
+    .list-group-item.demo {
+      width: 100%;
+      display: flex;
+      gap: .75em;
+    }
+    .list-group-item.demo > div {
+      flex: 1;
+    }
+    .list-group-item.demo > button {
+      background-color: #F6F7F8;
+      height: 2em;
+      padding: 0 .75em;
+      border: 1px solid rgba(0,0,0,.2);
+      border-radius: 6px;
+    }
+    .list-group-item.demo > button:active {
+      background-color: #eaebeb;
+    }
     .hljs-built_in, .hljs-symbol {
         color: #D76448;
     }
