--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -62,12 +62,11 @@
       overflow-x: auto;
     }
     .list-group-item.demo {
-      padding-bottom: 1.5em;
-    }
-    .list-group-item.demo {
-      width: 100%;
       display: flex;
-      gap: .75em;
+      gap: 1em;
+      width: 100%;
+      background-color: #ffe4c6;
+      padding-bottom: 1.5em;
     }
     .list-group-item.demo > div {
       flex: 1;
@@ -76,8 +75,9 @@
       background-color: #F6F7F8;
       height: 2em;
       padding: 0 .75em;
-      border: 1px solid rgba(0,0,0,.2);
+      border: 1px solid rgba(0,0,0,.25);
       border-radius: 6px;
+      margin: -.25em;
     }
     .list-group-item.demo > button:active {
       background-color: #eaebeb;
