--- a/docroot/.kit/bootstrap/parts/carousel.htm
+++ b/docroot/.kit/bootstrap/parts/carousel.htm
@@ -1,5 +1,5 @@
 <lib>
-  <:import src="../base.htm"/>
+  <!-- <:import src="../base.htm"/> -->
 
 	<!--- https://getbootstrap.com/docs/5.2/components/carousel/ -->
 	<!--- TODO: controls icon color -->
