--- a/docroot/index.html
+++ b/docroot/index.html
@@ -8,7 +8,7 @@
     <!--- https://getbootstrap.com/docs/5.3/getting-started/introduction/ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!--- https://icons.getbootstrap.com -->
-    <!--- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"> -->
     <!--- https://icons8.com/line-awesome -->
     <link href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" rel="stylesheet">
     <:import src="parts/page.htm"/>
@@ -17,6 +17,7 @@
     <:import src="parts/card.htm"/>
     <:import src="parts/footer.htm"/>
     <:import src="/.kit/bootstrap/opt/highlight-js.htm"/>
+    <:import src="/.kit/bootstrap/parts/carousel.htm"/>
   </head>
   <body>
     <app-navbar/>
@@ -134,13 +135,27 @@
                 </p>
               </li>
               <li class="list-group-item code"><div>
-<highlight-js :open="[['[' + '[']]" :source='<div :count="[[open]]0]]"
-     :did-init="[[open]]
-       setInterval(() => count++, 1000);
-     ]]">
-  Seconds: [[open]]count]]
-</div>'/>
+<highlight-js :open="[['[' + '[']]" :source='<:define tag="app-item" :k :v>
+  <span>[[open]]k]]</span>
+  <b :hidden="[[open]]v < 1]]">[[open]]v]]</b>
+</:define>
+
+<app-item :k="Inbox" :v="5"/>
+<app-item :k="Sent" :v="3"/>
+<app-item :k="Drafts" :v="0"/>
+<app-item :k="Spam" :v="2"/>'/>
               </div></li>
+              <li class="list-group-item demo">
+                <:define tag="app-item" :k :v>
+                  <span>[[k]]</span>
+                  <b :hidden="[[v < 1]]">[[v]]</b>
+                </:define>
+                
+                <app-item :k="Inbox" :v="5"/>
+                <app-item :k="Sent" :v="3"/>
+                <app-item :k="Drafts" :v="0"/>
+                <app-item :k="Spam" :v="2"/>
+              </li>
             </ul>
           </app-card>
         </div>
@@ -156,13 +171,22 @@
                 </p>
               </li>
               <li class="list-group-item code"><div>
-<highlight-js :open="[['[' + '[']]" :source='<div :count="[[open]]0]]"
-     :did-init="[[open]]
-       setInterval(() => count++, 1000);
-     ]]">
-  Seconds: [[open]]count]]
-</div>'/>
+<highlight-js :open="[['[' + '[']]" :source='<head>
+  <:import src="/.kit/bootstrap/all.htm"/>
+</head>
+<body>
+  <bs-carousel :autoPlay="[[open]]true]]">
+    <bs-carousel-item>First</bs-carousel-item>
+    <bs-carousel-item>Second</bs-carousel-item>
+  </bs-carousel>
+</body>'/>
               </div></li>
+              <li class="list-group-item demo">
+                <bs-carousel :autoPlay="[[true]]">
+                  <bs-carousel-item>First</bs-carousel-item>
+                  <bs-carousel-item>Second</bs-carousel-item>
+                </bs-carousel>
+              </li>
             </ul>
           </app-card>
         </div>
