--- a/docroot/parts/footer.htm
+++ b/docroot/parts/footer.htm
@@ -3,11 +3,16 @@
     .app-footer {
       background-color: [[page_headerBg]];
       color: #F6F7F8;
-      padding: 3em 0;
+      padding: 3em 1em;
       margin-top: 1.75em;
     }
     .app-footer a {
       color: #f3a996;
+    }
+    @media only screen and (min-width: 480px) {
+      .app-footer  {
+        padding: 3em 4em;
+      }
     }
   </style>
 
