--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -19,6 +19,7 @@
       border-radius: 5px;
     }
     pre > code {
+      letter-spacing: 0;
       background-color: initial;
       padding: 0;
       border: 0;
@@ -65,7 +66,6 @@
       display: flex;
       gap: 1em;
       width: 100%;
-      background-color: #ffe4c6;
       padding-bottom: 1.5em;
     }
     .list-group-item.demo > div {
@@ -81,6 +81,26 @@
     }
     .list-group-item.demo > button:active {
       background-color: #eaebeb;
+    }
+    .list-group-item.demo b {
+      background-color: #d67056;
+      color: white;
+      padding: .25em .5em;
+      border-radius: 1rem;
+      margin-left: .25rem;
+    }
+    .carousel {
+      text-align: center;
+    }
+    .carousel-control-next, .carousel-control-prev {
+      background-color: white;
+      opacity: .85 !important;
+    }
+    .carousel-control-prev-icon {
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23273141'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+    }
+    .carousel-control-next-icon {
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23273141'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
     }
     .hljs-built_in, .hljs-symbol {
         color: #D76448;
