--- a/docroot/parts/footer.htm
+++ b/docroot/parts/footer.htm
@@ -4,7 +4,7 @@
       background-color: [[page_headerBg]];
       color: #F6F7F8;
       padding: 3em 1em;
-      margin-top: 1.75em;
+      margin-top: 1em;
     }
     .app-footer a {
       color: #f3a996;
@@ -14,6 +14,10 @@
         padding: 3em 4em;
       }
     }
+    @media only screen and (min-width: 576px) {
+      .app-footer {
+        margin-top: 1.5em;
+      }
   </style>
 
   <:define tag="app-footer" class="app-footer">
