--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -67,6 +67,7 @@
       gap: 1em;
       width: 100%;
       padding-bottom: 1.5em;
+      -webkit-tap-highlight-color: #eaebeb;
     }
     .list-group-item.demo > div {
       flex: 1;
@@ -77,7 +78,7 @@
       padding: 0 .75em;
       border: 1px solid rgba(0,0,0,.25);
       border-radius: 6px;
-      margin: -.25em;
+      margin: -.25em 0;
     }
     .list-group-item.demo > button:active {
       background-color: #eaebeb;
@@ -89,6 +90,16 @@
       border-radius: 1rem;
       margin-left: .25rem;
     }
+    .list-group-item.demo.reusability {
+      padding: 1.25em 1.33em;
+    }
+    .list-group-item.demo.reusability div {
+      text-align: center;
+    }
+    .list-group-item.demo.reusability span {
+      display: inline-block;
+      padding: .25em 0;
+    }
     .carousel {
       text-align: center;
     }
@@ -97,10 +108,10 @@
       opacity: .85 !important;
     }
     .carousel-control-prev-icon {
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23273141'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
     }
     .carousel-control-next-icon {
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23273141'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
     }
     .hljs-built_in, .hljs-symbol {
         color: #D76448;
