--- a/docroot/index.html
+++ b/docroot/index.html
@@ -168,7 +168,7 @@
               <li class="list-group-item">
                 <p>
                   <a href="#">Custom tags</a> can be promoted to
-                  <a href="#">components</a> and
+                  <a href="#">components</a> and can be
                   collected in <a href="#">kits</a>,
                   making them reusable across projects.
                 </p>
