--- a/docroot/index.html
+++ b/docroot/index.html
@@ -15,8 +15,8 @@
     <:import src="parts/navbar.htm"/>
     <:import src="parts/hero.htm"/>
     <:import src="parts/card.htm"/>
+    <:import src="parts/code.htm"/>
     <:import src="parts/footer.htm"/>
-    <:import src="/.kit/bootstrap/opt/highlight-js.htm"/>
     <:import src="/.kit/bootstrap/parts/carousel.htm"/>
   </head>
   <body>
@@ -74,12 +74,16 @@
                 </p>
               </li>
               <li class="list-group-item code"><div>
-<highlight-js :open="[['[' + '[']]" :source='<div :count="[[open]]0]]"
-     :did-init="[[open]]
+
+<app-code><code>
+&lt;div :count=[[0]]
+     :did-init=[[
        setInterval(() => count++, 1000);
-     ]]">
-  Seconds: [[open]]count]]
-</div>'/>
+     ]]>
+  Seconds: [[count]]
+&lt;/div>
+</code></app-code>
+
               </div></li>
               <li class="list-group-item demo">
                 <div :count="[[0]]" :did-init="[[ setInterval(() => count++, 1000); ]]">
@@ -101,12 +105,16 @@
                 </p>
               </li>
               <li class="list-group-item code"><div>
-<highlight-js :open="[['[' + '[']]" :source='<:data-source :aka="cat"
+
+<app-code><code>
+&lt;:data-source :aka="cat"
               :url="/cat-facts"/>
-[[open]]cat.content.fact]]
-<button :on-click="[[open]]
+  [[cat.content.fact]]
+&lt;button :on-click="[[
   () => cat.trigger()
-]]">Next</button>'/>
+]]">Next&lt;/button>
+</code></app-code>
+
               </div></li>
               <li class="list-group-item demo">
                 <:data-source :aka="cat"
@@ -136,15 +144,19 @@
                 </p>
               </li>
               <li class="list-group-item code"><div>
-<highlight-js :open="[['[' + '[']]" :source='<:define tag="app-item" :k :v>
-  <span>[[open]]k]]</span>
-  <b :hidden="[[open]]v < 1]]">[[open]]v]]</b>
-</:define>
 
-<app-item :k="Inbox" :v="5"/>
-<app-item :k="Sent" :v="3"/>
-<app-item :k="Drafts" :v="0"/>
-<app-item :k="Spam" :v="2"/>'/>
+<app-code><code>
+&lt;:define tag="app-item" :k :v>
+  &lt;span>[[k]]&lt;/span>
+  &lt;b :hidden=[[v &lt; 1]]>[[v]]&lt;/b>
+&lt;/:define>
+
+&lt;app-item :k="Inbox" :v="5"/>
+&lt;app-item :k="Sent" :v="3"/>
+&lt;app-item :k="Drafts" :v="0"/>
+&lt;app-item :k="Spam" :v="2"/>
+</code></app-code>
+  
               </div></li>
               <li class="list-group-item demo reusability">
                 <:define tag="app-item" :k :v>
@@ -174,15 +186,20 @@
                 </p>
               </li>
               <li class="list-group-item code"><div>
-<highlight-js :open="[['[' + '[']]" :source='<head>
-  <:import src="/.kit/bootstrap/all.htm"/>
-</head>
-<body>
-  <bs-carousel :autoPlay="[[open]]true]]">
-    <bs-carousel-item>First</bs-carousel-item>
-    <bs-carousel-item>Second</bs-carousel-item>
-  </bs-carousel>
-</body>'/>
+
+<app-code><code>
+&lt;head>
+  &lt;:import src="/.kit/bootstrap/all.htm"/>
+&lt;/head>
+&lt;body>
+  &lt;bs-carousel :autoPlay=[[true]]>
+    &lt;bs-carousel-item>First&lt;/bs-carousel-item>
+    &lt;bs-carousel-item>Second&lt;/bs-carousel-item>
+  &lt;/bs-carousel>
+&lt;/body>
+</code></app-code>
+  
+
               </div></li>
               <li class="list-group-item demo">
                 <bs-carousel :autoPlay="[[true]]">
