--- a/docroot/index.html
+++ b/docroot/index.html
@@ -41,10 +41,10 @@
             <div class="panel">
             <div class="content">
             <p>
-              Using traditional reactive&nbsp;frameworks
-              like&nbsp;<a href="https://react.dev/"
-              >React</a>,&nbsp;<a href="https://angular.io/"
-              >Angular</a>&nbsp;or&nbsp;<a href="https://vuejs.org/"
+              Using a traditional reactive&nbsp;framework
+              like&nbsp;<a href="https://angular.io/"
+              >Angular</a>,&nbsp;<a href="https://react.dev/"
+              >React</a>&nbsp;or&nbsp;<a href="https://vuejs.org/"
               >Vue</a>
               can&nbsp;be&nbsp;pretty&nbsp;involved.
             </p>
@@ -180,7 +180,7 @@
               <li class="list-group-item">
                 <p>
                   <a href="#">Custom tags</a> can be promoted to
-                  <a href="#">components</a> and can be
+                  <a href="#">components</a> and be
                   collected in <a href="#">kits</a>,
                   making them reusable across projects.
                 </p>
