--- a/docroot/index.html
+++ b/docroot/index.html
@@ -41,7 +41,7 @@
             <div class="panel">
             <div class="content">
             <p>
-              Using a traditional reactive&nbsp;framework
+              Traditional reactive&nbsp;frameworks
               like&nbsp;<a href="https://angular.io/"
               >Angular</a>,&nbsp;<a href="https://react.dev/"
               >React</a>&nbsp;or&nbsp;<a href="https://vuejs.org/"
@@ -180,7 +180,7 @@
               <li class="list-group-item">
                 <p>
                   <a href="#">Custom tags</a> can be promoted to
-                  <a href="#">components</a> and be
+                  <a href="#">components</a> and
                   collected in <a href="#">kits</a>,
                   making them reusable across projects.
                 </p>
