--- a/docroot/parts/navbar.htm
+++ b/docroot/parts/navbar.htm
@@ -13,7 +13,7 @@
            class="navbar navbar-expand-sm bg-body-tertiary"
            data-bs-theme="dark">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img src="/assets/trillo.svg" width="32" height="32">
       </a>
       <button class="navbar-toggler"
@@ -28,13 +28,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true" href="#">Quick Start</a>
+            <a class="nav-link" target="Trillo Docs" href="https://trillojs.gitbook.io/docs/quick-start">Quick Start</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true" href="#">Docs</a>
+            <a class="nav-link" target="Trillo Docs" href="https://trillojs.gitbook.io/docs/">Docs</a>
           </li>
           <!---<li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle"
