--- a/docroot/index.html
+++ b/docroot/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>[[title]] - Reactive HTML</title>
-    <link rel="icon" href="/assets/trillo.svg">
+    <link rel="icon" href="/favicon.svg">
     <!--- https://getbootstrap.com/docs/5.3/getting-started/introduction/ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!--- https://icons.getbootstrap.com -->
@@ -215,7 +215,7 @@
 
     <app-footer>
       &copy; 2023 trillojs.org
-      <a href="https://github.com/fcapolini/trillo/blob/main/LICENSE" style="float: right">MIT Licence</a>
+      <a href="https://github.com/fcapolini/trillo/blob/main/LICENSE" target="Github" style="float: right">MIT Licence</a>
     </app-footer>
     <!--- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
