--- a/docroot/index.html
+++ b/docroot/index.html
@@ -50,7 +50,7 @@
             </p>
             <p>
               Trillo is a groundbreaking alternative&nbsp;which
-              <a href="#">strives&nbsp;for&nbsp;simplicity</a>.
+              <a href="https://trillojs.gitbook.io/docs/overview">strives&nbsp;for&nbsp;simplicity</a>.
             </p>
           </div>
           </div>
@@ -67,8 +67,8 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <p>
-                  You can declare <a href="#">logic values</a> and
-                  <a href="#">reactive expressions</a> using
+                  You can declare <a href="https://trillojs.gitbook.io/docs/topics/reactivity#logic-values">logic values</a> and
+                  <a href="https://trillojs.gitbook.io/docs/topics/reactivity#reactive-expressions">reactive expressions</a> using
                   <span style="text-wrap: nowrap;"><code>:</code>-prefixed</span> attributes and
                   <code style="text-wrap: nowrap;">[&#8288;[&hellip;]]</code> blocks.
                 </p>
@@ -100,8 +100,8 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <p>
-                  Page logic <a href="#">starts in the server</a>, to generate content-ready pages,
-                  and <a href="#">continues in the client</a>, to support user interaction.
+                  Page logic <a href="https://trillojs.gitbook.io/docs/topics/indexability#server">starts in the server</a>, to generate content-ready pages,
+                  and <a href="https://trillojs.gitbook.io/docs/topics/indexability#client">continues in the client</a>, to support user interaction.
                 </p>
               </li>
               <li class="list-group-item code"><div>
@@ -139,7 +139,7 @@
               <li class="list-group-item">
                 <p>
                   With <code style="text-wrap: nowrap;">&lt;:define></code> you can turn blocks of markup into parametric
-                  <a href="#">custom tags</a>,
+                  <a href="https://trillojs.gitbook.io/docs/topics/reusability#custom-tags">custom tags</a>,
                   ready to be reused anywhere in your code.
                 </p>
               </li>
@@ -156,14 +156,14 @@
 &lt;app-item :k="Drafts" :v="0"/>
 &lt;app-item :k="Spam" :v="2"/>
 </code></app-code>
-  
+
               </div></li>
               <li class="list-group-item demo reusability">
                 <:define tag="app-item" :k :v>
                   <span>[[k]]</span>
                   <b :hidden="[[v < 1]]">[[v]]</b>
                 </:define>
-                
+
                 <app-item :k="Inbox" :v="5"/>
                 <app-item :k="Sent" :v="3"/>
                 <app-item :k="Drafts" :v="0"/>
@@ -179,9 +179,9 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <p>
-                  <a href="#">Custom tags</a> can be promoted to
-                  <a href="#">components</a> and
-                  collected in <a href="#">kits</a>,
+                  <a href="https://trillojs.gitbook.io/docs/topics/reusability#custom-tags">Custom tags</a> can be promoted to
+                  <a href="https://trillojs.gitbook.io/docs/topics/kits#components">components</a> and
+                  collected in <a href="https://trillojs.gitbook.io/docs/topics/kits#kits">kits</a>,
                   making them reusable across projects.
                 </p>
               </li>
@@ -198,7 +198,7 @@
   &lt;/bs-carousel>
 &lt;/body>
 </code></app-code>
-  
+
 
               </div></li>
               <li class="list-group-item demo">
