--- a/docroot/index.html
+++ b/docroot/index.html
@@ -214,7 +214,7 @@
     </div>
 
     <app-footer>
-      &copy; 2023 trillojs.org
+      &copy; 2023 trillojs.dev
       <a href="https://github.com/fcapolini/trillo/blob/main/LICENSE" target="Github" style="float: right">MIT Licence</a>
     </app-footer>
     <!--- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script> -->
