--- a/docroot/parts/navbar.htm
+++ b/docroot/parts/navbar.htm
@@ -31,7 +31,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="Trillo Docs" href="https://trillojs.gitbook.io/docs/">Quick Start</a>
+            <a class="nav-link" target="Trillo Docs" href="https://trillojs.gitbook.io/docs/quick-start">Quick Start</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" target="Trillo Docs" href="https://trillojs.gitbook.io/docs/overview">Docs</a>
