--- a/docroot/parts/navbar.htm
+++ b/docroot/parts/navbar.htm
@@ -14,7 +14,7 @@
            data-bs-theme="dark">
     <div class="container">
       <a class="navbar-brand" href="/">
-        <img src="/favicon.svg" width="32" height="32">
+        <img src="/assets/trillo.svg" width="32" height="32">
       </a>
       <button class="navbar-toggler"
               type="button"
