--- a/docroot/index.html
+++ b/docroot/index.html
@@ -6,15 +6,15 @@
     <title>[[title]] - Reactive HTML</title>
     <link rel="icon" href="/favicon.svg">
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5YJYY38HRQ"></script>
+    <!--- Google tag (gtag.js) -->
+    <!---<script async src="https://www.googletagmanager.com/gtag/js?id=G-5YJYY38HRQ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-5YJYY38HRQ');
-    </script>
+    </script>-->
 
     <!--- https://getbootstrap.com/docs/5.3/getting-started/introduction/ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
