embedded hero background using data-url

--- a/docroot/parts/hero.htm
+++ b/docroot/parts/hero.htm
@@ -2,7 +2,8 @@
   <style data-name="app-hero">
     .app-hero {
       background-color: #f6b267;
-      background-image: url('/assets/Asset-104.svg');
+      /* background-image: url('/assets/Asset-104.svg'); */
+      background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20641.11%20641.11%22%3E%3Ctitle%3EAsset%20104%3C%2Ftitle%3E%3Cg%20id%3D%22Layer_2%22%20data-name%3D%22Layer%202%22%3E%3Cg%20id%3D%22Layer_1-2%22%20data-name%3D%22Layer%201%22%3E%3Crect%20width%3D%22641.11%22%20height%3D%22641.11%22%20transform%3D%22translate%280%20641.11%29%20rotate%28-90%29%22%20fill%3D%22%23f6b267%22%2F%3E%3Cpath%20d%3D%22M518.79%2C290.67c-10.32%2C77%2C56.49%2C114.26%2C35.3%2C192.78C538.33%2C541.84%2C494%2C548.72%2C495.71%2C597.5c.56%2C15.83%2C5.78%2C30.21%2C14%2C43.61H641.11v-498C590.1%2C159.83%2C527.72%2C224%2C518.79%2C290.67Z%22%20fill%3D%22%23f5845e%22%2F%3E%3Cpath%20d%3D%22M0%2C511.12c10.62%2C1.3%2C20.94.19%2C30-4.77%2C30.13-16.54%2C38.29-71.52%2C31.52-110-6.35-36.12-23-41.71-19.47-64.77%2C6.32-41.17%2C61.8-38.82%2C78.59-79.74%2C22.74-55.43-60.54-104.9-40.58-169C94.22%2C37.27%2C143.43%2C39.36%2C154.36%2C0H0Z%22%20fill%3D%22%23f89d66%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E");
       background-repeat: no-repeat;
       background-size: cover;
       background-position: 50% 50%;
