TR-83 apply Lighthouse recommendations

--- a/docroot/parts/card.htm
+++ b/docroot/parts/card.htm
@@ -14,7 +14,16 @@
       background-color: [[page_headerBg]];
       color: white;
     }
-    .card-header h5 {
+    .card-header h1 {
+        display: block;
+        font-size: 0.83em;
+        margin-block-start: 1.67em;
+        margin-block-end: 1.67em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+    }
+    .card-header h1 {
       font-size: 1.1rem;
       margin: .4em 0;
     }
