--- a/docroot/parts/code.htm
+++ b/docroot/parts/code.htm
@@ -1,13 +1,13 @@
 <lib>
   <style data-name="app-code">
     .app-code-tag {
-      color: #22863a;
+      color: #1a7730;
     }
     .app-code-attr {
       color: #005cc5;
     }
     .app-code-expr {
-      color: #cf6145;
+      color: #b04429;
     }
   </style>
 
