--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -5,7 +5,8 @@
       letter-spacing: .25px;
     }
     a {
-      color: #D76448;
+      /* color: #D76448; */
+      color: #bb4b2f;
       text-decoration: none;
     }
     .list-group-item {
@@ -24,6 +25,7 @@
       padding: 0;
       border: 0;
       border-radius: 0;
+      color: rgb(39, 43, 53);
     }
     .app-lead {
       font-size: 1.2rem;
@@ -31,7 +33,7 @@
       padding: .75rem 0rem 2.75rem 0rem;
       margin: 0 .5rem;
       text-align: center;
-      color: rgb(64, 71, 86);
+      color: rgb(39, 43, 53);
     }
     .app-lead p:not(:last-child) {
       margin-bottom: 1.85rem;
@@ -51,6 +53,11 @@
       border-color: #d67056;
       border-style: solid;
       transition: padding .2s;
+    }
+    .app-lead a {
+      /* color: #c15135; */
+      color: #b04429;
+      text-decoration: none;
     }
     .list-group-item.code > div {
       width: fit-content;
