--- a/docroot/index.html
+++ b/docroot/index.html
@@ -3,8 +3,12 @@
   <head :title="Trillo">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Isomorphic reactive web framework and server for Node.js and the browser">
+    <meta name="keywords" content="node node.js reactive isomorhpic web framework frontend">
+    <meta name="theme-color" content="[[page_headerBg]]"/>
     <title>[[title]] - Reactive HTML</title>
     <link rel="icon" href="/favicon.svg">
+    <link rel="apple-touch-icon" href="/favicon.svg"/>
 
     <!--- Google tag (gtag.js) -->
     <!---<script async src="https://www.googletagmanager.com/gtag/js?id=G-5YJYY38HRQ"></script>
@@ -17,7 +21,7 @@
     </script>-->
 
     <!--- https://getbootstrap.com/docs/5.3/getting-started/introduction/ -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="/res/bootstrap.min.css" rel="stylesheet">
     <!--- https://icons.getbootstrap.com -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!--- https://icons8.com/line-awesome -->
@@ -74,7 +78,7 @@
       <div class="row gx-3">
         <div class="col-lg-6">
           <app-card>
-            <h5 :slot="header">Reactive HTML</h5>
+            <h1 :slot="header">Reactive HTML</h1>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <p>
@@ -107,7 +111,7 @@
 
         <div class="col-lg-6">
           <app-card>
-            <h5 :slot="header">Indexable Pages</h5>
+            <h1 :slot="header">Indexable Pages</h1>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <p>
@@ -145,7 +149,7 @@
       <div class="row gx-3">
         <div class="col-lg-6">
           <app-card>
-            <h5 :slot="header">Reusable Code</h5>
+            <h1 :slot="header">Reusable Code</h1>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <p>
@@ -186,7 +190,7 @@
 
         <div class="col-lg-6">
           <app-card>
-            <h5 :slot="header">Component Kits</h5>
+            <h1 :slot="header">Component Kits</h1>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <p>
@@ -229,6 +233,6 @@
       <a href="https://github.com/trillojs/trillo/blob/main/LICENSE" target="Github" style="float: right">MIT Licence</a>
     </app-footer>
     <!--- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="/res/bootstrap.bundle.min.js"></script>
   </body>
 </html>
