--- a/docroot/index.html
+++ b/docroot/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="[[page_headerBg]]"/>
     <title>[[title]] - Reactive HTML</title>
     <link rel="icon" href="/favicon.svg">
-    <link rel="apple-touch-icon" href="/favicon.svg"/>
+    <link rel="apple-touch-icon" href="/assets/trillo-square.png"/>
 
     <!--- Google tag (gtag.js) -->
     <!---<script async src="https://www.googletagmanager.com/gtag/js?id=G-5YJYY38HRQ"></script>
