Trillo Website: dark mode

--- a/docroot/index.html
+++ b/docroot/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Isomorphic reactive web framework and server for Node.js and the browser">
     <meta name="keywords" content="node node.js reactive isomorhpic web framework frontend">
     <meta name="theme-color" content="[[page_headerBg]]"/>
+    <meta name="color-scheme" content="light dark">
     <title>[[title]] - Reactive HTML</title>
     <link rel="icon" href="/favicon.svg">
     <link rel="apple-touch-icon" href="/assets/trillo-square.png"/>
@@ -33,6 +34,7 @@
     <:import src="parts/code.htm"/>
     <:import src="parts/footer.htm"/>
     <:import src="/.kit/bootstrap/parts/carousel.htm"/>
+    <:import src="parts/dark.htm"/>
   </head>
   <body>
     <app-navbar/>
