Trillo Website: dark mode

--- a/docroot/parts/dark.htm
+++ b/docroot/parts/dark.htm
@@ -22,6 +22,7 @@
     }
     code {
       background-color: [[dark_codeBg]];
+      color: [[dark_leadFg]];
       border-color: [[dark_codeBg]];
     }
     pre code {
