Trillo Website: dark mode

--- a/docroot/parts/dark.htm
+++ b/docroot/parts/dark.htm
@@ -65,6 +65,10 @@
     }
     .list-group-item.demo > button {
       background-color: #445167;
+      color: [[dark_leadFg]];
+    }
+    .list-group-item.demo > button:active {
+      background-color: #344157;
     }
     .carousel-control-prev,
     .carousel-control-next {
