--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -81,6 +81,7 @@
     }
     .list-group-item.demo > button {
       background-color: #F6F7F8;
+      color: #222;
       height: 2em;
       padding: 0 .75em;
       border: 1px solid rgba(0,0,0,.25);
