--- a/docroot/parts/card.htm
+++ b/docroot/parts/card.htm
@@ -1,4 +1,4 @@
-<lib>
+<lib :card_headerBg="">
   <!--- https://getcssscan.com/css-box-shadow-examples -->
   <style data-name="app-card">
     .card {
@@ -11,7 +11,7 @@
     }
     .card-header {
       /* background-color: rgba(222, 222, 218, 0.358); */
-      background-color: [[page_headerBg]];
+      background-color: [[card_headerBg]];
       color: white;
     }
     .card-header h1 {
