--- a/docroot/parts/footer.htm
+++ b/docroot/parts/footer.htm
@@ -1,13 +1,13 @@
 <lib>
   <style data-name="app-footer">
     .app-footer {
-      background-color: [[page_headerBg]];
+      background-color: [[footer_bg]];
       color: #F6F7F8;
       padding: 3em 1em;
       margin-top: 1em;
     }
     .app-footer a {
-      color: #f3a996;
+      color: #f89d66
     }
     @media only screen and (min-width: 480px) {
       .app-footer  {
