--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -1,4 +1,6 @@
-<lib :page_headerBg="#273141">
+<lib :page_headerBg="#172131"
+     :card_headerBg="#172131"
+     :footer_bg="#273141">
   <style data-name="page">
     body {
       background-color: #FBFCFD;
