--- a/docroot/parts/hero.htm
+++ b/docroot/parts/hero.htm
@@ -40,9 +40,7 @@
       padding: 0 .9rem;
       border: 0;
     }
-    .app-hero code i {
-      font-size: 24px;
-      width: 24px;
+    .app-hero code svg {
       margin-right: .75rem;
     }
     @media only screen and (min-width: 576px) {
