--- a/docroot/index.html
+++ b/docroot/index.html
@@ -24,7 +24,7 @@
     <!--- https://getbootstrap.com/docs/5.3/getting-started/introduction/ -->
     <link href="/res/bootstrap.min.css" rel="stylesheet">
     <!--- https://icons.getbootstrap.com -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!--- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"> -->
     <!--- https://icons8.com/line-awesome -->
     <!--- <link href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" rel="stylesheet"> -->
     <:import src="parts/page.htm"/>
