--- a/docroot/parts/dark.htm
+++ b/docroot/parts/dark.htm
@@ -74,5 +74,9 @@
     .carousel-control-next {
       background-color: [[dark_cardBg]];
     }
+    .app-footer {
+      background-color: #1c1d1f;
+    }
+  }
 </style>
 </lib>
