--- a/docroot/parts/dark.htm
+++ b/docroot/parts/dark.htm
@@ -16,6 +16,7 @@
   @media (prefers-color-scheme: dark) {
     body {
       background-color: [[dark_pageBg]];
+      color: [[dark_pageFg]];
     }
     a, .app-lead a {
       color: [[dark_A]];
@@ -27,6 +28,12 @@
     }
     pre code {
       color: [[dark_cardFg]];
+    }
+    .app-hero {
+      color: #111;
+    }
+    .app-hero b {
+      font-weight: 600;
     }
     .app-lead .content {
       background-color: [[dark_leadBg]];
