--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -4,6 +4,7 @@
   <style data-name="page">
     body {
       background-color: #FBFCFD;
+      color: #111;
       letter-spacing: .25px;
     }
     a {
