--- a/docroot/index.html
+++ b/docroot/index.html
@@ -22,7 +22,7 @@
     </script>-->
 
     <!--- https://getbootstrap.com/docs/5.3/getting-started/introduction/ -->
-    <link href="/res/bootstrap.min.css" rel="stylesheet">
+    <link href="/res/bootstrap-5.3.1/bootstrap.min.css" rel="stylesheet">
     <!--- https://icons.getbootstrap.com -->
     <!--- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"> -->
     <!--- https://icons8.com/line-awesome -->
@@ -255,6 +255,6 @@
       <a href="https://github.com/trillojs/trillo/blob/main/LICENSE" target="Github" style="float: right">MIT Licence</a>
     </app-footer>
     <!--- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script> -->
-    <script src="/res/bootstrap.bundle.min.js"></script>
+    <script src="/res/bootstrap-5.3.1/bootstrap.bundle.min.js"></script>
   </body>
 </html>
