--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -1,4 +1,4 @@
-<lib :page_headerBg="#172131"
+<lib :page_headerBg="#fff"
      :card_headerBg="#172131"
      :footer_bg="#172131">
   <style data-name="page">
