--- a/docroot/parts/card.htm
+++ b/docroot/parts/card.htm
@@ -6,8 +6,8 @@
       margin-bottom: 3rem;
       margin: 0 .5em 3em .5em;
       overflow: hidden;
-      /* border: 0; */
-      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 6px 0px;
+      border: 1px solid #e6e6e6;
+      /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 6px 0px; */
     }
     .card-header {
       /* background-color: rgba(222, 222, 218, 0.358); */
@@ -37,6 +37,7 @@
     }
     .list-group-item {
       /* background-color: rgba(245, 245, 220, 0.509); */
+      border-color: #e6e6e6;
     }
   </style>
 
