--- a/docroot/parts/footer.htm
+++ b/docroot/parts/footer.htm
@@ -2,13 +2,15 @@
   <style data-name="app-footer">
     .app-footer {
       background-color: [[footer_bg]];
-      color: #F6F7F8;
+      /* color: #F6F7F8; */
+      color: rgba(0,0,0,.7);
       padding: 3em 1em;
+      border-top: 1px solid #e6e6e6;
       margin-top: 1em;
     }
-    .app-footer a {
+    /* .app-footer a {
       color: #f89d66
-    }
+    } */
     @media only screen and (min-width: 480px) {
       .app-footer  {
         padding: 3em 4em;
