--- a/docroot/parts/navbar.htm
+++ b/docroot/parts/navbar.htm
@@ -9,6 +9,12 @@
     .navbar a {
       /* color: white; */
     }
+    .navbar a > svg {
+      fill: #111;
+    }
+    .navbar-toggler {
+      padding: 4px 5px;
+    }
     @media (min-width: 576px) {
       .navbar-brand {
         margin-left: .75rem;
