--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -1,6 +1,6 @@
 <lib :page_headerBg="#fff"
      :card_headerBg="#172131"
-     :footer_bg="#172131">
+     :footer_bg="#fff">
   <style data-name="page">
     body {
       background-color: #FBFCFD;
