--- a/docroot/parts/footer.htm
+++ b/docroot/parts/footer.htm
@@ -20,6 +20,14 @@
       .app-footer {
         margin-top: 1.5em;
       }
+    }
+    @media (prefers-color-scheme: dark) {
+      .app-footer {
+        background-color: #000 !important;
+        color: rgba(255,255,255,.85);
+        border-top: 1px solid #282828;
+      }
+    }
   </style>
 
   <:define tag="app-footer" class="app-footer">
