--- a/docroot/parts/navbar.htm
+++ b/docroot/parts/navbar.htm
@@ -2,7 +2,6 @@
   <style data-name="app-navbar">
     .navbar {
       background-color: [[page_headerBg]] !important;
-      min-height: 56px;
       padding-top: .75rem;
       padding-bottom: .75rem;
     }
@@ -51,6 +50,11 @@
         cursor: default;
         pointer-events: none;
       }
+      .navbar > .container > .navbar-toggler,
+      .navbar > .container-lg > .navbar-toggler {
+        color: #bbb;
+        border-color: #bbb;
+      }
     }
   </style>
 
@@ -71,7 +75,10 @@
               aria-controls="navbarSupportedContent"
               aria-expanded="false"
               aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <!--- <span class="navbar-toggler-icon"></span> -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+        </svg>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-lg-0">
