--- a/docroot/index.html
+++ b/docroot/index.html
@@ -54,200 +54,202 @@
       </a>
     </app-navbar>
 
-    <app-hero>
-      <h1>Trillo</h1>
-      <p>
-        the web framework for Node and the browser that
-        <b>adds reactivity to HTML itself</b>
-      </p>
-      <br/>
-      <div class="prompt">
-        <code>
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-terminal" viewBox="0 0 16 16">
-            <path d="M6 9a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3A.5.5 0 0 1 6 9zM3.854 4.146a.5.5 0 1 0-.708.708L4.793 6.5 3.146 8.146a.5.5 0 1 0 .708.708l2-2a.5.5 0 0 0 0-.708l-2-2z"/>
-            <path d="M2 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h12z"/>
-          </svg>
-          npm i trillo
-        </code>
-      </div>
-    </app-hero>
-
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <div class="app-lead">
-            <div class="panel">
-            <div class="content">
-            <p>
-              Traditional reactive&nbsp;frameworks
-              like&nbsp;<a href="https://angular.io/"
-              >Angular</a>,&nbsp;<a href="https://react.dev/"
-              >React</a>&nbsp;or&nbsp;<a href="https://vuejs.org/"
-              >Vue</a>
-              can&nbsp;be&nbsp;pretty&nbsp;involved.
-            </p>
-            <p>
-              Trillo is a groundbreaking alternative&nbsp;which
-              <a target="Trillo Docs" href="https://docs.trillojs.dev/en/overview">strives&nbsp;for&nbsp;simplicity</a>.
-            </p>
-          </div>
-          </div>
-          </div>
+    <div class="app-body">
+      <app-hero>
+        <h1>Trillo</h1>
+        <p>
+          the web framework for Node and the browser that
+          <b>adds reactivity to HTML itself</b>
+        </p>
+        <br/>
+        <div class="prompt">
+          <code>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-terminal" viewBox="0 0 16 16">
+              <path d="M6 9a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3A.5.5 0 0 1 6 9zM3.854 4.146a.5.5 0 1 0-.708.708L4.793 6.5 3.146 8.146a.5.5 0 1 0 .708.708l2-2a.5.5 0 0 0 0-.708l-2-2z"/>
+              <path d="M2 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h12z"/>
+            </svg>
+            npm i trillo
+          </code>
         </div>
-      </div>
-    </div>
+      </app-hero>
 
-    <div class="container">
-      <div class="row gx-3">
-        <div class="col-lg-6">
-          <app-card>
-            <h1 :slot="header">Reactive HTML</h1>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <p>
-                  You can declare <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reactivity#logic-values">logic values</a> and
-                  <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reactivity#reactive-expressions">reactive expressions</a>
-                  directly in HTML, using
-                  <span style="text-wrap: nowrap;"><code>:</code>-prefixed</span> attributes and
-                  <code style="text-wrap: nowrap;">[&#8288;[...]]</code> blocks.
-                </p>
-              </li>
-              <li class="list-group-item code"><div>
-
-<app-code><code>
-&lt;div :count=[[0]]
-     :did-init=[[
-       setInterval(() => count++, 1000);
-     ]]>
-  Seconds: [[count]]
-&lt;/div>
-</code></app-code>
-
-              </div></li>
-              <li class="list-group-item demo">
-                <div :count="[[0]]" :did-init="[[ setInterval(() => count++, 1000); ]]">
-                  Seconds: [[count]]
-                </div>
-              </li>
-            </ul>
-          </app-card>
-        </div>
-
-        <div class="col-lg-6">
-          <app-card>
-            <h1 :slot="header">Indexable Pages</h1>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <p>
-                  Page logic <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/indexability#server">starts in the server</a>, to generate content-ready pages,
-                  and <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/indexability#client">continues in the client</a>, to support user interaction.
-                </p>
-              </li>
-              <li class="list-group-item code"><div>
-
-<app-code><code>
-&lt;:data-source :aka="cat"
-              :url="/cat-facts"/>
-[[cat.content.fact]]
-&lt;button :on-click="[[
-  () => cat.trigger()
-]]">Next&lt;/button>
-</code></app-code>
-
-              </div></li>
-              <li class="list-group-item demo">
-                <:data-source :aka="cat"
-                              :url="/cat-facts"/>
-                <div>[[cat.content.fact]]</div>
-                <button :on-click="[[
-                  () => cat.trigger()
-                ]]">Next</button>
-              </li>
-            </ul>
-          </app-card>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="app-lead">
+              <div class="panel">
+              <div class="content">
+              <p>
+                Traditional reactive&nbsp;frameworks
+                like&nbsp;<a href="https://angular.io/"
+                >Angular</a>,&nbsp;<a href="https://react.dev/"
+                >React</a>&nbsp;or&nbsp;<a href="https://vuejs.org/"
+                >Vue</a>
+                can&nbsp;be&nbsp;pretty&nbsp;involved.
+              </p>
+              <p>
+                Trillo is a groundbreaking alternative&nbsp;which
+                <a target="Trillo Docs" href="https://docs.trillojs.dev/en/overview">strives&nbsp;for&nbsp;simplicity</a>.
+              </p>
+            </div>
+            </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="container">
-      <div class="row gx-3">
-        <div class="col-lg-6">
-          <app-card>
-            <h1 :slot="header">Reusable Code</h1>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <p>
-                  With <code style="text-wrap: nowrap;">&lt;:define></code> you can turn blocks of markup into parametric
-                  <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reusability#custom-tags">custom tags</a>,
-                  ready to be reused anywhere in your code.
-                </p>
-              </li>
-              <li class="list-group-item code"><div>
+      <div class="container">
+        <div class="row gx-3">
+          <div class="col-lg-6">
+            <app-card>
+              <h1 :slot="header">Reactive HTML</h1>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <p>
+                    You can declare <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reactivity#logic-values">logic values</a> and
+                    <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reactivity#reactive-expressions">reactive expressions</a>
+                    directly in HTML, using
+                    <span style="text-wrap: nowrap;"><code>:</code>-prefixed</span> attributes and
+                    <code style="text-wrap: nowrap;">[&#8288;[...]]</code> blocks.
+                  </p>
+                </li>
+                <li class="list-group-item code"><div>
 
-<app-code><code>
-&lt;:define tag="app-item" :k :v>
-  &lt;span>[[k]]&lt;/span>
-  &lt;b :hidden=[[v &lt; 1]]>[[v]]&lt;/b>
-&lt;/:define>
+  <app-code><code>
+  &lt;div :count=[[0]]
+      :did-init=[[
+        setInterval(() => count++, 1000);
+      ]]>
+    Seconds: [[count]]
+  &lt;/div>
+  </code></app-code>
 
-&lt;app-item :k="Inbox" :v="5"/>
-&lt;app-item :k="Sent" :v="3"/>
-&lt;app-item :k="Drafts" :v="0"/>
-&lt;app-item :k="Spam" :v="2"/>
-</code></app-code>
+                </div></li>
+                <li class="list-group-item demo">
+                  <div :count="[[0]]" :did-init="[[ setInterval(() => count++, 1000); ]]">
+                    Seconds: [[count]]
+                  </div>
+                </li>
+              </ul>
+            </app-card>
+          </div>
 
-              </div></li>
-              <li class="list-group-item demo reusability">
-                <:define tag="app-item" :k :v>
-                  <span>[[k]]</span>
-                  <b :hidden="[[v < 1]]">[[v]]</b>
-                </:define>
+          <div class="col-lg-6">
+            <app-card>
+              <h1 :slot="header">Indexable Pages</h1>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <p>
+                    Page logic <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/indexability#server">starts in the server</a>, to generate content-ready pages,
+                    and <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/indexability#client">continues in the client</a>, to support user interaction.
+                  </p>
+                </li>
+                <li class="list-group-item code"><div>
 
-                <app-item :k="Inbox" :v="5"/>
-                <app-item :k="Sent" :v="3"/>
-                <app-item :k="Drafts" :v="0"/>
-                <app-item :k="Spam" :v="2"/>
-              </li>
-            </ul>
-          </app-card>
+  <app-code><code>
+  &lt;:data-source :aka="cat"
+                :url="/cat-facts"/>
+  [[cat.content.fact]]
+  &lt;button :on-click="[[
+    () => cat.trigger()
+  ]]">Next&lt;/button>
+  </code></app-code>
+
+                </div></li>
+                <li class="list-group-item demo">
+                  <:data-source :aka="cat"
+                                :url="/cat-facts"/>
+                  <div>[[cat.content.fact]]</div>
+                  <button :on-click="[[
+                    () => cat.trigger()
+                  ]]">Next</button>
+                </li>
+              </ul>
+            </app-card>
+          </div>
         </div>
+      </div>
 
-        <div class="col-lg-6">
-          <app-card>
-            <h1 :slot="header">Component Kits</h1>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <p>
-                  <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reusability#custom-tags">Custom tags</a> can be promoted to
-                  <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/kits#components">components</a> and
-                  collected in <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/kits#kits">kits</a>,
-                  making them reusable across projects.
-                </p>
-              </li>
-              <li class="list-group-item code"><div>
+      <div class="container">
+        <div class="row gx-3">
+          <div class="col-lg-6">
+            <app-card>
+              <h1 :slot="header">Reusable Code</h1>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <p>
+                    With <code style="text-wrap: nowrap;">&lt;:define></code> you can turn blocks of markup into parametric
+                    <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reusability#custom-tags">custom tags</a>,
+                    ready to be reused anywhere in your code.
+                  </p>
+                </li>
+                <li class="list-group-item code"><div>
 
-<app-code><code>
-&lt;head>
-  &lt;:import src="/.kit/bootstrap/all.htm"/>
-&lt;/head>
-&lt;body>
-  &lt;bs-carousel :autoPlay=[[true]]>
-    &lt;bs-carousel-item>First&lt;/bs-carousel-item>
-    &lt;bs-carousel-item>Second&lt;/bs-carousel-item>
-  &lt;/bs-carousel>
-&lt;/body>
-</code></app-code>
+  <app-code><code>
+  &lt;:define tag="app-item" :k :v>
+    &lt;span>[[k]]&lt;/span>
+    &lt;b :hidden=[[v &lt; 1]]>[[v]]&lt;/b>
+  &lt;/:define>
+
+  &lt;app-item :k="Inbox" :v="5"/>
+  &lt;app-item :k="Sent" :v="3"/>
+  &lt;app-item :k="Drafts" :v="0"/>
+  &lt;app-item :k="Spam" :v="2"/>
+  </code></app-code>
+
+                </div></li>
+                <li class="list-group-item demo reusability">
+                  <:define tag="app-item" :k :v>
+                    <span>[[k]]</span>
+                    <b :hidden="[[v < 1]]">[[v]]</b>
+                  </:define>
+
+                  <app-item :k="Inbox" :v="5"/>
+                  <app-item :k="Sent" :v="3"/>
+                  <app-item :k="Drafts" :v="0"/>
+                  <app-item :k="Spam" :v="2"/>
+                </li>
+              </ul>
+            </app-card>
+          </div>
+
+          <div class="col-lg-6">
+            <app-card>
+              <h1 :slot="header">Component Kits</h1>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <p>
+                    <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/reusability#custom-tags">Custom tags</a> can be promoted to
+                    <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/kits#components">components</a> and
+                    collected in <a target="Trillo Docs" href="https://docs.trillojs.dev/en/topics/kits#kits">kits</a>,
+                    making them reusable across projects.
+                  </p>
+                </li>
+                <li class="list-group-item code"><div>
+
+  <app-code><code>
+  &lt;head>
+    &lt;:import src="/.kit/bootstrap/all.htm"/>
+  &lt;/head>
+  &lt;body>
+    &lt;bs-carousel :autoPlay=[[true]]>
+      &lt;bs-carousel-item>First&lt;/bs-carousel-item>
+      &lt;bs-carousel-item>Second&lt;/bs-carousel-item>
+    &lt;/bs-carousel>
+  &lt;/body>
+  </code></app-code>
 
 
-              </div></li>
-              <li class="list-group-item demo">
-                <bs-carousel :autoPlay="[[true]]">
-                  <bs-carousel-item>First</bs-carousel-item>
-                  <bs-carousel-item>Second</bs-carousel-item>
-                </bs-carousel>
-              </li>
-            </ul>
-          </app-card>
+                </div></li>
+                <li class="list-group-item demo">
+                  <bs-carousel :autoPlay="[[true]]">
+                    <bs-carousel-item>First</bs-carousel-item>
+                    <bs-carousel-item>Second</bs-carousel-item>
+                  </bs-carousel>
+                </li>
+              </ul>
+            </app-card>
+          </div>
         </div>
       </div>
     </div>
