--- a/docroot/parts/card.htm
+++ b/docroot/parts/card.htm
@@ -8,6 +8,7 @@
       overflow: hidden;
       border: 1px solid #e6e6e6;
       /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 6px 0px; */
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 0px 3px 0px;
     }
     .card-header {
       /* background-color: rgba(222, 222, 218, 0.358); */
