--- a/docroot/parts/card.htm
+++ b/docroot/parts/card.htm
@@ -36,6 +36,10 @@
       padding-left: 1.33em;
       padding-right: 1.33em;
     }
+    .list-group-item.code {
+      padding-left: .33em;
+      padding-right: 1.33em;
+    }
     .list-group-item {
       /* background-color: rgba(245, 245, 220, 0.509); */
       border-color: #e6e6e6;
