--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -16,6 +16,7 @@
       padding-top: 1.5em;
     }
     code {
+      font-size: 80%;
       background-color: #ffe4c6;
       color: initial;
       padding: .15em .25em;
