--- a/docroot/parts/navbar.htm
+++ b/docroot/parts/navbar.htm
@@ -1,6 +1,8 @@
 <lib>
   <style data-name="app-navbar">
     .navbar {
+      font-weight: 400;
+      letter-spacing: .25px;
       background-color: [[page_headerBg]] !important;
       padding-top: .75rem;
       padding-bottom: .75rem;
@@ -17,7 +19,7 @@
     @media (min-width: 576px) {
       .navbar-brand {
         margin-left: .75rem;
-        margin-right: .66rem;
+        margin-right: .75rem;
       }
     }
 
@@ -29,7 +31,7 @@
     }
     .nav-link.active {
       color: #888 !important;
-      font-weight: 500;
+      /* font-weight: 500; */
     }
     @media (prefers-color-scheme: dark) {
       .navbar {
@@ -46,7 +48,7 @@
       }
       .nav-link.active {
         color: #bbb !important;
-        font-weight: 500;
+        /* font-weight: 500; */
         cursor: default;
         pointer-events: none;
       }
