--- a/docroot/docs.html
+++ b/docroot/docs.html
@@ -59,9 +59,13 @@
 
     <app-navbar :container="container-lg" data-bs-theme="light">
       <li :slot="left" class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/">
-          [[head.title + (main.title ? ' - ' + main.title : '')]]
-        </a>
+        <a class="nav-link" aria-current="page" href="/">Home</a>
+      </li>
+      <li :slot="left" class="nav-item">
+        <a :class-nav-link :class-active="[[docurl === 'quick-start']]" href="/docs/quick-start">Quick Start</a>
+      </li>
+      <li :slot="left" class="nav-item">
+        <a :class-nav-link :class-active="[[docurl !== 'quick-start']]" href="/docs/overview">Docs</a>
       </li>
       <!--- <form :slot="right" class="d-flex" role="search">
         <input class="form-control me-2"
