--- a/docroot/docs.html
+++ b/docroot/docs.html
@@ -57,49 +57,25 @@
                     return ret;
                   }]]"/>
 
-    <app-navbar :container="container-lg" data-bs-theme="light">
+    <app-navbar :container="container-lg"
+                data-bs-theme="light"
+                :getDataItem="[[function(data, key) {
+                  for (let d of data.docs) {
+                    if (d.key === key) {
+                      return d;
+                    }
+                  }
+                }]]">
       <li :slot="left" class="nav-item">
         <a class="nav-link" aria-current="page" href="/">Home</a>
       </li>
       <li :slot="left" class="nav-item">
         <a :class-nav-link :class-active="[[docurl === 'quick-start']]" href="/docs/quick-start">Quick Start</a>
       </li>
-      <!-- <li :slot="left" class="nav-item">
-        <a :class-nav-link :class-active="[[docurl !== 'quick-start']]" href="/docs/overview">Docs</a>
-      </li> -->
 
-      <li :slot="left" class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Docs
-        </a>
-        <!-- <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul> -->
-        <ul class="dropdown-menu"
-            :data="[[flattenData(docsData.content.docs)]]"
-            :flattenData="[[function(docs) {
-              const ret = [];
-              for (let i of docs) {
-                if (i.children) {
-                  ret.push({ key: i.key });
-                  for (let j of i.children) {
-                    ret.push({ key: '- ' + j.key, val: j.val });
-                  }
-                } else {
-                  ret.push(i);
-                }
-              }
-              return { docs: ret };
-            }]]">
-          <li :class-selected="[[data.url === docurl]]"
-              :data="[[data.docs]]">
-            <a class="dropdown-item" href="[[PAGEPATH + 'docs/' + data.url]]">[[data.key]]</a>
-          </li>
-        </ul>
-      </li>
+      <nav-dropdown :slot="left" :data="[[getDataItem(docsData.content, 'Topics')]]"/>
+      <!-- <nav-dropdown :slot="left" :data="[[getDataItem(docsData.content, 'How-to')]]"/> -->
+      <nav-dropdown :slot="left" :data="[[getDataItem(docsData.content, 'Reference')]]"/>
 
       <!--- <form :slot="right" class="d-flex" role="search">
         <input class="form-control me-2"
